# dartwing-frappe

./: .gitignore  DEPENDENCIES.md  DEVCONTAINER_SETUP.md  MULTI_BRANCH_ARCHITECTURE.md  README.md  license-dependancies.md  setup.sh
.devcontainer/: .env  .env.example  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  FIXES_SUMMARY.md  README-devcontainer.md  REBUILD_REQUIRED.md  USER_CONFIGURATION.md  VERIFICATION.md  devcontainer.json  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  setup-bench.sh  setup-dartwing.sh  setup-frappe.sh  setup_dartwing_in_frappeBench.sh
.warp/: warp.md
devcontainer.example/: .env.example  Dockerfile  README.md  devcontainer.json  docker-compose.override.yml  docker-compose.yml
development/frappe-bench/: FAMILY_MANAGER_README.md  QUICK_START.md  install_family_manager.sh  setup_family.py  setup_family_manager.py  test_family_api.sh
development/frappe-bench/apps/family_manager/: README.md  pyproject.toml
development/frappe-bench/apps/family_manager/family_manager/: hooks.py
docs/: ARCHITECTURE.md  MULTI_BRANCH_ARCHITECTURE.md
scripts/: README.md  bench-watchdog.sh  check-bench-status.sh  daemonize.sh  del-workspace.sh  delete-workspace.sh  init-bench.sh  migrate-to-workspaces.sh  new-branch.sh  new-dartwing-container.sh  new-frappe-workspace.sh  new-workspace.sh  post-start.sh  setup-workspace.sh  setup.sh  start-bench.sh  sync-to-devbench.sh  update-frappe-workspace.sh  update-workspace.sh
scripts/lib/: ai-assistant.sh  ai-provider.sh  common.sh  (+1 more)
